--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: crosshair;
 }
 
 #backscene {
@@ -19,21 +20,24 @@ body {
 #fish {
     height: auto;
     width: 250px;
+    height: 80px;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: 0.5s linear;
-    transform: scaleX(-1);
+    top: 100px;
+    left: 100px;
+    /* transition: 0.1s linear; */
+    transform: scaleX(1);
     display: flex;
     align-items: center;
-    justify-content: cneter;
+    /* justify-content: cneter; */
+    transform-origin: 0 50%;
     opacity: 0;
+    /* transform: scaleY(-1); */
 }
 
 #head {
     position: absolute;
     height: 50%;
-    transition: 0.5s linear;
+    /* transition: 0.5s linear; */
     left: 0px;
     width: 30px;
 
@@ -43,7 +47,7 @@ body {
     width: 250px;
     /* position: absolute; */
 
-    transition: 0.5s linear;
+    /* transition: 0.5s linear; */
     /* transform: scaleX(-1); */
     /* opacity: 0; */
 }
@@ -51,10 +55,11 @@ body {
 #food {
     width: 100px;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     transition: 0.1s linear;
     transform: scaleX(-1);
+
     opacity: 0;
 }
 
@@ -109,24 +114,35 @@ button:hover {
 
 }
 
+#headDiv {
+    position: absolute;
+    display: flex;
+    top: 0;
+    flex-direction: row;
+    gap: 10px;
+}
 
 #score,
-#timeRemain {
-    position: absolute;
-    top: 0;
+#timeRemain,
+#open {
+    /* position: absolute; */
+    /* top: 0; */
     color: white;
     padding: 10px;
     background-color: blueviolet;
     border-radius: 10px;
 }
 
+/* 
 #score {
     left: 35%
 }
 
 #timeRemain {
     right: 35%
-}
+} */
+
+/* #open {} */
 
 #anleitung {
     width: 550px;
@@ -134,4 +150,10 @@ button:hover {
     display: flex;
     height: auto;
     padding: 10px;
+}
+
+
+#mode {
+    display: flex;
+    flex-direction: columns;
 }
